# LaunchMind

./: .env.example  .gitignore  README.md  main.py  message_bus.py  pyproject.toml
agents/: ceo_agent.py  engineer_agent.py  marketing_agent.py  product_agent.py  qa_agent.py
