[project]
name = "launchmind"
version = "0.1.0"
description = "LaunchMind: A multi-agent AI system that autonomously runs a micro-startup: from idea to code, marketing and deployment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
